# Digital-Image-Processing

EE569_hw1_8991379333_Ravishankar/: Anna_cropped.raw  Anna_resized.raw  Beach_bright_A.raw  Beach_bright_B.raw  C.raw  Lena_mean_filter.raw  Lena_median_filter.raw  M.raw  README  README.txt  Skyline_A.raw  Skyline_B.raw  Student_1_gaussian.raw  Trojan_Special_effect.raw  Turtle_H.raw  Turtle_L.raw  Turtle_S.raw  p1_RGB2CMY.cpp  p1_RGB2HSL.cpp  p1_cropping_resizing.cpp  p2_Special_Effect.cpp  p2_histogram_equalization_methodA.cpp  p2_histogram_equalization_methodB.cpp  p2_histogram_matching_gaussian.cpp  p3_NLM.cpp  p3_PSNR.cpp  p3_mean_filter.cpp  p3_median_filter.cpp
EE569_hw2_8991379333_Ravishankar/: README  README.txt  Shrink.h  Skeleton.h  Thinning.h  p1_homographic_transformation.cpp  p1_puzzle_matching.cpp  p1_spatial_warping.cpp  p2_JJN.cpp  p2_dithering.cpp  p2_floyd_steinberg.cpp  p2_four_level_dithering.cpp  p2_stucki.cpp  p3_binarize_rice.cpp  p3_categorize_grains.cpp  p3_count_grains.cpp  p3_hole_filling.cpp  p3_shape_classifier.cpp  p3_shape_skeletonizing.cpp  p3_shape_thinning.cpp
EE569_hw3_8991379333_Ravishankar/: EE569_hw3_8991379333_Ravishankar.txt  README.txt
EE569_hw3_8991379333_Ravishankar/P1/Texture_Classification/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  p1a_TextureClassification  p1a_TextureClassification.cpp
EE569_hw3_8991379333_Ravishankar/P1/Texture_Segmentation/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  p1b_TextureSegmentation  p1b_TextureSegmentation.cpp
(+34 files in other folders)
