cmake_minimum_required(VERSION 2.8)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
project( p1a_TextureClassification )
find_package( OpenCV REQUIRED )
add_executable( p1a_TextureClassification p1a_TextureClassification.cpp )
include_directories(${OpenCV_INCLUDE_DIRS})
target_link_libraries( p1a_TextureClassification ${OpenCV_LIBS} )
