cmake_minimum_required(VERSION 2.8)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
project( p1b_TextureSegmentation )
find_package( OpenCV REQUIRED )
add_executable( p1b_TextureSegmentation p1b_TextureSegmentation.cpp )
include_directories(${OpenCV_INCLUDE_DIRS})
target_link_libraries( p1b_TextureSegmentation ${OpenCV_LIBS} )
